--- a/css/body.css
+++ b/css/body.css
@@ -1,13 +1,13 @@
 :root{
     --primary-color:#17202A;
     --secondary-color:#D35400;
-    --tertiary-color:#2ECC71;
+    --tertiary-color:#27AE60;
     --dark-color:#000;
     --dark-color_transp:#000000b4;
     --light-color:#fff;
     --primary-font_color:#17202A;
     --secondary-font_color:#D35400;
-    --tertiary-font_color:#2ECC71;
+    --tertiary-font_color:#27AE60;
     --dark-font_color:#000;
     --dark-font_transp:#000000b4;
     --light-font_color:#fff;
