--- a/css/body.css
+++ b/css/body.css
@@ -11,7 +11,7 @@
     --dark-font_color:#000;
     --dark-font_transp:#000000b4;
     --light-font_color:#fff;
-    --transition:0.5s;
+    --transition:.5s;
     --padding:1rem;
     --margin:1rem;
     --gap:1rem;
@@ -30,4 +30,17 @@
 
 body{
     font-family: var(--font-family);
+}
+
+.disable-pc{
+    display: none;
+}
+
+@media(width<=1250px){
+    .disable-movil{
+        display: none;
+    }
+    .activate-movil{
+        display: block;
+    }
 }
