--- a/css/header.css
+++ b/css/header.css
@@ -61,15 +61,14 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            min-height: 80px;
-            overflow: hidden;
+            
+            
             & .navbar{
                 display: flex;
-                min-height: 100%;
                 & a{
                     color: var(--light-font_color);
                     text-decoration: none;
-                    padding: 30px;
+                    padding: 20px;
                     font-weight: bold;
                     &:hover{
                         background-color: var(--secondary-font_color);
@@ -110,7 +109,11 @@
         }
         & .container_navbar{
             & .conta_navbar{
+                height: 60px;
                 width: 95%;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
                 & .logo{
                     font-size: calc(var(--font-size) * 1.25);
                     color: var(--light-font_color);
@@ -128,7 +131,7 @@
                 & .navbar{
                     position: relative;
                     opacity: 0;
-                    left: 120%;
+                    left: -120%;
                     transition: var(--transition);
                     display: flex;
                     flex-direction: column;
