--- a/css/section.css
+++ b/css/section.css
@@ -1,6 +1,6 @@
 
 main{
-    padding: 50px 0px;
+    padding: calc(var(--padding) * 3.125) 0;
 }
 
 .container-reservation{
@@ -8,9 +8,74 @@ main{
         max-width: 1250px;
         margin: auto;
         display: flex;
-        gap: 20px;
+        flex-wrap: wrap;
+        gap: calc(var(--gap) * 1.25);
+        justify-content: space-around;
         & .container-formulario{
+            padding: calc(var(--padding) * 5) calc(var(--padding) * 3.125);
+            width: 500px;
             background-color: var(--tertiary-color);
+            display: grid;
+            align-items: center;
+            & form{
+                display: grid;
+                flex-direction: column;
+                gap: var(--gap);
+                & input,select,option{
+                    border: 0;
+                    padding: calc(var(--padding) / 1.6);
+                    font-family: inherit;
+                    font-weight: bolder;
+                    outline: none;
+                }
+                & input[type="submit"]{
+                    background-color: var(--dark-color);
+                    color: var(--light-font_color);
+                    cursor: pointer;
+                    transition: var(--transition);
+                    padding: calc(var(--padding) * 1.25) 0;
+                    &:hover{
+                        background-color: var(--primary-color);
+                    }
+                }
+            }
+        }
+        & .info-reservation{
+            width: 700px;
+            display: grid;
+            place-content: center;
+            gap: calc(var(--gap) * 1.25);
+            & h4{
+                color: var(--tertiary-font_color);
+                font-size: calc(var(--font-size) * 1.25);
+            }
+            & h2{
+                font-size: calc(var(--font-size) * 2.5);
+                & span{
+                    color: var(--secondary-font_color);
+                }
+            }
+            & .conta-services{
+                display: flex;
+                justify-content: space-between;
+                flex-wrap: wrap;
+                gap: calc(var(--gap) * 1.25);
+                & .service{
+                    width: 300px;
+                    display: grid;
+                    gap: var(--gap);
+                    & .service-title{
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        gap: calc(var(--gap) / 1.6);
+                        & .icon-service{
+                            color: var(--secondary-font_color);
+                            font-size: calc(var(--font-size) * 2.25);
+                        }
+                    }
+                }
+            }
         }
     }
 }
