--- a/css/body.css
+++ b/css/body.css
@@ -2,6 +2,7 @@
     --primary-color:#17202A;
     --secondary-color:#D35400;
     --tertiary-color:#27AE60;
+    --quaternary-color:#eeeeee;
     --dark-color:#000;
     --dark-color_transp:#000000b7;
     --light-color:#fff;
