--- a/css/section.css
+++ b/css/section.css
@@ -11,14 +11,13 @@ main{
         margin: auto;
         display: flex;
         flex-wrap: wrap;
-        gap: calc(var(--gap) * 1.25);
-        justify-content: space-around;
+        justify-content: space-between;
         & form{
             padding: calc(var(--padding) * 5) calc(var(--padding) * 3.125);
             width: 500px;
             background-color: var(--tertiary-color);
             display: grid;
-            gap: var(--gap);
+            gap: calc(var(--gap) * 1.25);
             & input,select,option{
                 border: 0;
                 padding: calc(var(--padding) / 1.6);
@@ -86,14 +85,30 @@ main{
         margin: auto;
         display: flex;
         flex-wrap: wrap;
-        gap: calc(var(--gap) * 1.25);
+        justify-content: space-between;
         & .conten_AboutUs{
-            width: 800px;
+            width: 600px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 20px;
+            & h4{
+                color: var(--tertiary-font_color);
+                font-size: calc(var(--font-size) * 1.25);
+            }
+            & h2{
+                font-size: calc(var(--font-size) * 2.5);
+            }
+            & ul{
+                & li::marker{
+                    content: "✔️";
+                }
+            }
         }
         & .img_About{
             display: grid;
             place-content: center;
-            width: 400px;
+            width: 500px;
             & .img_col{
                 & img{
                     width: 100%;
@@ -101,7 +116,7 @@ main{
             }
             & .img_row{
                 display: flex;
-                width: 200px;
+                width: 250px;
                 & img{
                     width: 100%;
                     display: block;
