--- a/css/section.css
+++ b/css/section.css
@@ -181,9 +181,7 @@ main{
                 font-size: calc(var(--font-size) * 3.125);
                 color: var(--tertiary-font_color);
             }
-            & h3{
-                font-size: calc(var(--font-size) * 1.5);
-            }
+            & h3{font-size: calc(var(--font-size) * 1.5);}
             & p{
                 font-size: calc(var(--font-size) * 0.94);
                 line-height: calc(var(--spacing-size) * 1.5);
@@ -205,17 +203,13 @@ main{
     .container_reservation{
         & .conta_reservation{
             justify-content: space-around;
-            & form{
-                width: 400px;
-            }
+            & form{width: 400px;}
             & .info_reservation{
                 width: 600px;
                 & .conta_services{
                     width: 100%;
                     justify-content: space-around;
-                    & .service{
-                        width: 200px;
-                    }
+                    & .service{width: 200px;}
                 }
             }
         }
@@ -237,7 +231,6 @@ main{
     }
 }
 
-
 @media(width<=1030px){
 
     .container_reservation{
@@ -256,9 +249,7 @@ main{
                     }
                 }
             }
-            & form{
-                width: 70%;
-            }
+            & form{width: 70%;}
         }
     }
 
@@ -279,6 +270,85 @@ main{
                     & img{
                         width: 50%;
                     }
+                }
+            }
+        }
+    }
+}
+
+@media(width<=650px){
+
+    main{
+        gap: calc(var(--gap) * 1.25);
+    }
+
+    .container_reservation{
+        .conta_reservation{
+            & form{
+                width: 95%;
+                padding: calc(var(--padding) * 2.5) calc(var(--padding) * 1.25);
+            }
+            & .info_reservation{
+                width: 95%;
+                & h4,p{font-size: calc(var(--font-size) * 0.875);}
+                & h2{font-size: calc(var(--font-size) * 1.5);}
+                & .conta_services{
+                    & .service{
+                        width: 100%;
+                        & .service_title{
+                            & .icon_service,h3{
+                                font-size: calc(var(--font-size) * 1.25);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .container_AboutUs{
+        & .conta_AboutUs{
+            width: 90%;
+            & .conten_AboutUs{
+                width: 100%;
+                & h4{font-size: calc(var(--font-size) * 0.875);}
+                & h2{font-size: calc(var(--font-size) * 1.5);}
+                & p{
+                    font-size: calc(var(--font-size) * 0.875);
+                    text-align: justify;
+                    line-height: calc(var(--spacing-size) * 1.25);
+                }
+                & ul{padding-left: calc(var(--padding) * 1.25);
+                    & li{font-size: calc(var(--font-size) * 0.875);}
+                }
+                & a{
+                    width: 80%;
+                    margin: auto;
+                }
+            }
+        }
+    }
+
+    .container_functions{
+        & .conta_functions{
+            & h4{font-size: calc(var(--font-size) * 0.875);}
+            & h2{font-size: calc(var(--font-size) * 1.5);}
+            & .function{
+                width: 95%;
+                padding: 10px;
+                & .icon_function{
+                    font-size: calc(var(--font-size) * 1.625);
+                }
+                & h3{
+                    font-size: calc(var(--font-size) * 1.25);
+                }
+                & p{
+                    font-size: calc(var(--font-size) * 0.875);
+                    text-align: justify;
+                    line-height: calc(var(--spacing-size) * 1.25);
+                }
+                & a{
+                    font-size: calc(var(--font-size) * 0.875);
                 }
             }
         }
