--- a/css/section.css
+++ b/css/section.css
@@ -26,6 +26,15 @@ main{
                 outline: none;
                 width: 100%;
             }
+            & .placeholder
+            {
+              color: gray;
+            }
+            
+            & .focused
+            {
+              color: black;
+            }
             & input[type="submit"]{
                 background-color: var(--dark-color);
                 color: var(--light-font_color);
@@ -162,8 +171,10 @@ main{
         & h2{
             width: 100%;
             text-align: center;
-            color: var(--secondary-font_color);
             font-size: calc(var(--font-size) * 2.5);
+            & span{
+                color: var(--secondary-font_color);
+            }
         }
         & .function{
             background-color: var(--quaternary-color);
