--- a/css/article.css
+++ b/css/article.css
@@ -34,20 +34,100 @@
                 & .feature_aspect{
                     display: grid;
                     grid-template-columns: repeat(2, 1fr);
-                    grid-gap: 10px;
+                    grid-gap: calc(var(--gap) / 1.6);
                     grid-auto-rows: minmax(60px, auto);
                     align-items: center;
                     & .icon_feature{
                         color: var(--tertiary-font_color);
-                        font-size: 35px;
+                        font-size: calc(var(--font-size) * 2.25);
                         pointer-events: none;
                         & span{
                             color: var(--dark-font_color);
-                            font-size: 14px;
-                            padding: 0 10px;
-                            letter-spacing: 1px;
+                            font-size: calc(var(--font-size) * 0.75);
+                            padding: 0 calc(var(--padding) / 1.6);
+                            letter-spacing: calc(var(--spacing-size) / 8);
                         }
                     }
+                }
+            }
+        }
+    }
+}
+
+.container_teams{
+    & .conta_teams{
+        max-width: 1250px;
+        margin: auto;
+        display: grid;
+        gap: calc(var(--gap) * 1.25);
+        text-align: center;
+        & h4{
+            color: var(--tertiary-font_color);
+            font-size: calc(var(--font-size) * 1.25);
+        }
+        & h2{
+            font-size: calc(var(--font-size) * 2.5);
+            & span{
+                color: var(--secondary-font_color);
+            }
+        }
+        & .teams{
+            display: flex;
+            flex-wrap: wrap;
+            gap: calc(var(--gap) * 1.25);
+            justify-content: space-between;
+            & .team_person{
+                width: 250px;
+                height: 350px;
+                position: relative;
+                overflow: hidden;
+                border-top-left-radius: calc(var(--border-radius) / 1.6);
+                border-top-right-radius: calc(var(--border-radius) / 1.6);
+                & img{
+                    object-fit: cover;
+                }
+                & .content-team_person{
+                    background-color: var(--dark-color_transp);
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    gap: calc(var(--gap) * 2.5);
+                    color: var(--tertiary-font_color);
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                    width: 100%;
+                    transform: translateY(90%);
+                    transition: var(--transition);
+                    & h3{
+                        font-size: calc(var(--font-size) * 1.5);
+                        letter-spacing: calc(var(--spacing-size) / 8);
+                    }
+                    & p{
+                        font-weight: bold;
+                    }
+                    & .social_person{
+                        display: flex;
+                        justify-content: center;
+                        gap: calc(var(--gap) * 1.25);
+                        list-style:none;
+                        & a{
+                            color: var(--secondary-font_color);
+                            border: 1px solid var(--secondary-font_color);;
+                            border-radius: 50%;
+                            padding: calc(var(--padding) / 1.6);
+                            font-size: calc(var(--font-size) * 0.75);
+                            transition: var(--transition);
+                            &:hover{
+                                background-color: var(--secondary-color);
+                                color: var(--light-font_color);
+                            }
+                        }
+                    }
+                }
+                &:hover .content-team_person{
+                    transform: translateY(0%);
                 }
             }
         }
